--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -3,6 +3,38 @@ name = "backend"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "backend"
+
+[lints.clippy]
+pedantic = { level = "deny", priority = 1 }
+wildcard_imports = "deny"
+must_use_candidate = "warn"
+enum_glob_use = "deny"
+nursery = { level = "deny", priority = 1 }
+unwrap_used = "deny"
+
+[profile.release]
+overflow-checks = false
+lto = "thin"
+codegen-units = 1
+panic = "abort"
+incremental = false
+opt-level = "z"
+strip = "none"
+rpath = false
+debug-assertions = false
 
 [dependencies]
+actix-files = "0.6.6"
+actix-web = "4.9.0"
+config = { version = "0.14.0", features = ["yaml"] }
+deadpool-redis = "0.18.0"
+dotenv = "0.15.0"
+mongodb = "3.1.0"
+serde = { version = "1.0.210", features = ["derive"] }
+simplelog = "0.12.2"
