--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -36,9 +36,11 @@ config = { version = "0.14.0", features = ["yaml"] }
 deadpool-redis = "0.18.0"
 dotenv = "0.15.0"
 mongodb = "3.1.0"
+openai-api-rs = "5.0.8"
 reqwest = "0.12.7"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+serde_yaml = "0.9.34"
 simplelog = "0.12.2"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["fmt", "std", "env-filter", "registry", "json", "tracing-log"] }
