--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.3",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-switch": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
