--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,11 @@
-FROM rust:latest
-WORKDIR /usr/src/app
+FROM rust:1.81
+
+WORKDIR /app
 
 COPY . .
 
 RUN cargo build --release
 
-CMD cargo run --quiet --release
+CMD ["./target/release/backend"]
+EXPOSE 8099
 
