--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "extract-colors": "^4.0.8",
+    "get-pixels": "^3.3.3",
     "next": "14.2.13",
+    "proj4": "^2.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-switch": "^7.0.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.8",
+    "@types/get-pixels": "^3.3.4",
     "@types/node": "^20",
+    "@types/proj4": "^2.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
