--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -32,6 +32,7 @@ debug-assertions = false
 [dependencies]
 actix-files = "0.6.6"
 actix-web = "4.9.0"
+chrono = "0.4.38"
 config = { version = "0.14.0", features = ["yaml"] }
 deadpool-redis = "0.18.0"
 dotenv = "0.15.0"
